include/Win32/Physics.NewtonImport.hpp

struct TNewtonCollisionInfoRecord;
struct TNewtonUserMeshCollisionCollideDesc;
struct TNewtonUserMeshCollisionRayHitDesc;
struct TNewtonHingeSliderUpdateDesc;
struct TNewtonUserContactPoint;
struct TNewtonImmediateModeConstraint;
struct TNewtonMeshDoubleData;
struct TNewtonMeshFloatData;
struct TNewtonMeshVertexFormat;
typedef float dFloat;
typedef float *PFloat;
typedef float *PdFloat;
typedef int *PInteger;
typedef __int64 dLong;
typedef void * *PNewtonBody;
typedef void * *PNewtonWorld;
typedef void * *PNewtonJoint;
typedef void * *PNewtonMaterial;
typedef void * *PNewtonCollision;
typedef void * *PNewtonFracturedCompoundMeshPart;
struct DECLSPEC_DRECORD TNewtonCollisionInfoRecord
{
public:
	System::StaticArray<System::StaticArray<float, 4>, 4> m_offsetMatrix;
	TNewtonCollisionMaterial m_collisionMaterial;
	int m_collisionType;
	int m_collisionUserID;
	
public:
	union
	{
		struct 
		{
			System::StaticArray<float, 64> m_paramArray;
		};
		struct 
		{
			TNewtonSceneCollisionParam shapedataSceneCollision;
		};
		struct 
		{
			TNewtonHeightFieldCollisionParam shapedataHeightField;
		};
		struct 
		{
			TNewtonCollisionTreeParam shapedataTree;
		};
		struct 
		{
			TNewtonCompoundCollisionParam shapedataCompound;
		};
		struct 
		{
			TNewtonDeformableMeshParam m_deformableMesh;
		};
		struct 
		{
			TNewtonConvexHullParam shapedataConvexHull;
		};
		struct 
		{
			TNewtonChamferCylinderParam shapedataChamferCylinder;
		};
		struct 
		{
			TNewtonCylinderParam shapedataCylinder;
		};
		struct 
		{
			TNewtonCapsuleParam shapedataCapsule;
		};
		struct 
		{
			TNewtonSphereParam shapedataSphere;
		};
		struct 
		{
			TNewtonConeParam shapedataCone;
		};
		struct 
		{
			TNewtonBoxParam shapedataBox;
		};
		
	};
};
typedef TNewtonCollisionInfoRecord *PNewtonCollisionInfoRecord;
struct DECLSPEC_DRECORD TNewtonUserMeshCollisionCollideDesc
{
public:
	System::StaticArray<float, 4> m_boxP0;
	System::StaticArray<float, 4> m_boxP1;
	System::StaticArray<float, 4> m_boxDistanceTravel;
	int m_threadNumber;
	int m_faceCount;
	int m_vertexStrideInBytes;
	float m_skinThickness;
	void *m_userData;
	void * *m_objBody;
	void * *m_polySoupBody;
	void * *m_objCollision;
	void * *m_polySoupCollision;
	float *m_vertex;
	int *m_faceIndexCount;
	int *m_faceVertexIndex;
};
typedef TNewtonUserMeshCollisionCollideDesc *PNewtonUserMeshCollisionCollideDesc;
struct DECLSPEC_DRECORD TNewtonUserMeshCollisionRayHitDesc
{
public:
	System::StaticArray<float, 4> m_p0;
	System::StaticArray<float, 4> m_p1;
	System::StaticArray<float, 4> m_normalOut;
	__int64 m_userIdOut;
	void *m_userData;
};
typedef TNewtonUserMeshCollisionRayHitDesc *PNewtonUserMeshCollisionRayHitDesc;
struct DECLSPEC_DRECORD TNewtonHingeSliderUpdateDesc
{
public:
	float m_accel;
	float m_minFriction;
	float m_maxFriction;
	float m_timestep;
};
typedef TNewtonHingeSliderUpdateDesc *PNewtonHingeSliderUpdateDesc;
struct DECLSPEC_DRECORD TNewtonUserContactPoint
{
public:
	System::StaticArray<float, 4> m_point;
	System::StaticArray<float, 4> m_normal;
	__int64 m_shapeId0;
	__int64 m_shapeId1;
	float m_penetration;
	System::StaticArray<int, 3> m_unused;
};
typedef TNewtonUserContactPoint *PNewtonUserContactPoint;
struct DECLSPEC_DRECORD TNewtonImmediateModeConstraint
{
public:
	System::StaticArray<System::StaticArray<float, 6>, 8> m_jacobian01;
	System::StaticArray<System::StaticArray<float, 6>, 8> m_jacobian10;
	System::StaticArray<float, 8> m_minFriction;
	System::StaticArray<float, 8> m_maxFriction;
	System::StaticArray<float, 8> m_jointAccel;
	System::StaticArray<float, 8> m_jointStiffness;
};
typedef TNewtonImmediateModeConstraint *PNewtonImmediateModeConstraint;
struct DECLSPEC_DRECORD TNewtonMeshDoubleData
{
public:
	double *m_data;
	int *m_indexList;
	int m_strideInBytes;
};
typedef TNewtonMeshDoubleData *PNewtonMeshDoubleData;
struct DECLSPEC_DRECORD TNewtonMeshFloatData
{
public:
	float *m_data;
	int *m_indexList;
	int m_strideInBytes;
};
typedef TNewtonMeshFloatData *PNewtonMeshFloatData;
struct DECLSPEC_DRECORD TNewtonMeshVertexFormat
{
public:
	int m_faceCount;
	int *m_faceIndexCount;
	int *m_faceMaterial;
	TNewtonMeshDoubleData m_vertex;
	TNewtonMeshFloatData m_normal;
	TNewtonMeshFloatData m_binormal;
	TNewtonMeshFloatData m_uv0;
	TNewtonMeshFloatData m_uv1;
	TNewtonMeshFloatData m_vertexColor;
};
typedef TNewtonMeshVertexFormat *PNewtonMeshVertexFormat;
typedef void * __cdecl (*NewtonAllocMemory)(int sizeInBytes);
typedef NewtonAllocMemory *PNewtonAllocMemory;
typedef void __cdecl (*NewtonFreeMemory)(const void * ptr, int sizeInBytes);
typedef NewtonFreeMemory *PNewtonFreeMemory;
typedef void __cdecl (*NewtonWorldDestructorCallback)(const PNewtonWorld world);
typedef NewtonWorldDestructorCallback *PNewtonWorldDestructorCallback;
typedef void __cdecl (*NewtonPostUpdateCallback)(const PNewtonWorld world, float timestep);
typedef NewtonPostUpdateCallback *PNewtonPostUpdateCallback;
typedef void __cdecl (*NewtonCreateContactCallback)(const PNewtonWorld newtonWorld, const PNewtonJoint contact);
typedef NewtonCreateContactCallback *PNewtonCreateContactCallback;
typedef void __cdecl (*NewtonDestroyContactCallback)(const PNewtonWorld newtonWorld, const PNewtonJoint contact);
typedef NewtonDestroyContactCallback *PNewtonDestroyContactCallback;
typedef void __cdecl (*NewtonWorldListenerDebugCallback)(const PNewtonWorld world, const void * listener, const void * debugContext);
typedef NewtonWorldListenerDebugCallback *PNewtonWorldListenerDebugCallback;
typedef void __cdecl (*NewtonWorldListenerBodyDestroyCallback)(const PNewtonWorld world, const void * listenerUserData, const PNewtonBody body);
typedef NewtonWorldListenerBodyDestroyCallback *PNewtonWorldListenerBodyDestroyCallback;
typedef void __cdecl (*NewtonWorldUpdateListenerCallback)(const PNewtonWorld world, const void * listenerUserData, float timestep);
typedef NewtonWorldUpdateListenerCallback *PNewtonWorldUpdateListenerCallback;
typedef void __cdecl (*NewtonWorldDestroyListenerCallback)(const PNewtonWorld world, const void * listenerUserData);
typedef NewtonWorldDestroyListenerCallback *PNewtonWorldDestroyListenerCallback;
typedef __int64 __cdecl (*NewtonGetTimeInMicrosencondsCallback)(void);
typedef NewtonGetTimeInMicrosencondsCallback *PNewtonGetTimeInMicrosencondsCallback;
typedef void __cdecl (*NewtonSerializeCallback)(const void * serializeHandle, const void * buffer, int size);
typedef NewtonSerializeCallback *PNewtonSerializeCallback;
typedef void __cdecl (*NewtonDeserializeCallback)(const void * serializeHandle, const void * buffer, int size);
typedef NewtonDeserializeCallback *PNewtonDeserializeCallback;
typedef void __cdecl (*NewtonOnBodySerializationCallback)(const PNewtonBody body, const void * userData, PNewtonSerializeCallback functionparam, const void * serializeHandle);
typedef NewtonOnBodySerializationCallback *PNewtonOnBodySerializationCallback;
typedef void __cdecl (*NewtonOnBodyDeserializationCallback)(const PNewtonBody body, const void * userData, PNewtonDeserializeCallback functionparam, const void * serializeHandle);
typedef NewtonOnBodyDeserializationCallback *PNewtonOnBodyDeserializationCallback;
typedef void __cdecl (*NewtonOnJointSerializationCallback)(const PNewtonJoint joint, PNewtonSerializeCallback functionparam, const void * serializeHandle);
typedef NewtonOnJointSerializationCallback *PNewtonOnJointSerializationCallback;
typedef void __cdecl (*NewtonOnJointDeserializationCallback)(const PNewtonBody body0, const PNewtonBody body1, PNewtonDeserializeCallback functionparam, const void * serializeHandle);
typedef NewtonOnJointDeserializationCallback *PNewtonOnJointDeserializationCallback;
typedef void __cdecl (*NewtonOnUserCollisionSerializationCallback)(const void * userData, PNewtonSerializeCallback functionparam, const void * serializeHandle);
typedef NewtonOnUserCollisionSerializationCallback *PNewtonOnUserCollisionSerializationCallback;
typedef void __cdecl (*NewtonUserMeshCollisionDestroyCallback)(const void * userData);
typedef NewtonUserMeshCollisionDestroyCallback *PNewtonUserMeshCollisionDestroyCallback;
typedef float __cdecl (*NewtonUserMeshCollisionRayHitCallback)(const PNewtonUserMeshCollisionRayHitDesc lineDescData);
typedef NewtonUserMeshCollisionRayHitCallback *PNewtonUserMeshCollisionRayHitCallback;
typedef void __cdecl (*NewtonUserMeshCollisionGetCollisionInfo)(const void * userData, const PNewtonCollisionInfoRecord infoRecord);
typedef NewtonUserMeshCollisionGetCollisionInfo *PNewtonUserMeshCollisionGetCollisionInfo;
typedef int __cdecl (*NewtonUserMeshCollisionAABBTest)(const void * userData, const PFloat boxP0, const PFloat boxP1);
typedef NewtonUserMeshCollisionAABBTest *PNewtonUserMeshCollisionAABBTest;
typedef int __cdecl (*NewtonUserMeshCollisionGetFacesInAABB)(const void * userData, const PFloat p0, const PFloat p1, const PFloat vertexArray, const PInteger vertexCount, const PInteger vertexStrideInBytes, const PInteger indexList, int maxIndexCount, const PInteger userDataList);
typedef NewtonUserMeshCollisionGetFacesInAABB *PNewtonUserMeshCollisionGetFacesInAABB;
typedef void __cdecl (*NewtonUserMeshCollisionCollideCallback)(const PNewtonUserMeshCollisionCollideDesc collideDescData, const void * continueCollisionHandle);
typedef NewtonUserMeshCollisionCollideCallback *PNewtonUserMeshCollisionCollideCallback;
typedef int __cdecl (*NewtonTreeCollisionFaceCallback)(const void * context, const PFloat polygon, int strideInBytes, const PInteger indexArray, int indexCount);
typedef NewtonTreeCollisionFaceCallback *PNewtonTreeCollisionFaceCallback;
typedef float __cdecl (*NewtonCollisionTreeRayCastCallback)(const PNewtonBody body, const PNewtonCollision treeCollision, float intersection, const PFloat normal, int faceId, const void * usedData);
typedef NewtonCollisionTreeRayCastCallback *PNewtonCollisionTreeRayCastCallback;
typedef float __cdecl (*NewtonHeightFieldRayCastCallback)(const PNewtonBody body, const PNewtonCollision heightFieldCollision, float intersection, int row, int col, const PFloat normal, int faceId, const void * usedData);
typedef NewtonHeightFieldRayCastCallback *PNewtonHeightFieldRayCastCallback;
typedef void __cdecl (*NewtonCollisionCopyConstructionCallback)(const PNewtonWorld newtonWorld, const PNewtonCollision collision, const PNewtonCollision sourceCollision);
typedef NewtonCollisionCopyConstructionCallback *PNewtonCollisionCopyConstructionCallback;
typedef void __cdecl (*NewtonCollisionDestructorCallback)(const PNewtonWorld newtonWorld, const PNewtonCollision collision);
typedef NewtonCollisionDestructorCallback *PNewtonCollisionDestructorCallback;
typedef void __cdecl (*NewtonTreeCollisionCallback)(const PNewtonBody bodyWithTreeCollision, const PNewtonBody body, int faceID, int vertexCount, const PFloat vertex, int vertexStrideInBytes);
typedef NewtonTreeCollisionCallback *PNewtonTreeCollisionCallback;
typedef void __cdecl (*NewtonBodyDestructor)(const PNewtonBody body);
typedef NewtonBodyDestructor *PNewtonBodyDestructor;
typedef void __cdecl (*NewtonApplyForceAndTorque)(const PNewtonBody body, float timestep, int threadIndex);
typedef NewtonApplyForceAndTorque *PNewtonApplyForceAndTorque;
typedef void __cdecl (*NewtonSetTransform)(const PNewtonBody body, const PFloat matrix, int threadIndex);
typedef NewtonSetTransform *PNewtonSetTransform;
typedef int __cdecl (*NewtonIslandUpdate)(const PNewtonWorld newtonWorld, const void * islandHandle, int bodyCount);
typedef NewtonIslandUpdate *PNewtonIslandUpdate;
typedef void __cdecl (*NewtonFractureCompoundCollisionOnEmitCompoundFractured)(const PNewtonBody fracturedBody);
typedef NewtonFractureCompoundCollisionOnEmitCompoundFractured *PNewtonFractureCompoundCollisionOnEmitCompoundFractured;
typedef void __cdecl (*NewtonFractureCompoundCollisionOnEmitChunk)(const PNewtonBody chunkBody, const PNewtonFracturedCompoundMeshPart fracturexChunkMesh, const PNewtonCollision fracturedCompountCollision);
typedef NewtonFractureCompoundCollisionOnEmitChunk *PNewtonFractureCompoundCollisionOnEmitChunk;
typedef void __cdecl (*NewtonFractureCompoundCollisionReconstructMainMeshCallBack)(const PNewtonBody body, const PNewtonFracturedCompoundMeshPart mainMesh, const PNewtonCollision fracturedCompountCollision);
typedef NewtonFractureCompoundCollisionReconstructMainMeshCallBack *PNewtonFractureCompoundCollisionReconstructMainMeshCallBack;
typedef unsigned __cdecl (*NewtonWorldRayPrefilterCallback)(const PNewtonBody body, const PNewtonCollision collision, const void * userData);
typedef NewtonWorldRayPrefilterCallback *PNewtonWorldRayPrefilterCallback;
typedef float __cdecl (*NewtonWorldRayFilterCallback)(const PNewtonBody body, const PNewtonCollision shapeHit, const PFloat hitContact, const PFloat hitNormal, __int64 collisionID, const void * userData, float intersectParam);
typedef NewtonWorldRayFilterCallback *PNewtonWorldRayFilterCallback;
typedef int __cdecl (*NewtonOnAABBOverlap)(const PNewtonJoint contact, float timestep, int threadIndex);
typedef NewtonOnAABBOverlap *PNewtonOnAABBOverlap;
typedef void __cdecl (*NewtonContactsProcess)(const PNewtonJoint contact, float timestep, int threadIndex);
typedef NewtonContactsProcess *PNewtonContactsProcess;
typedef int __cdecl (*NewtonOnCompoundSubCollisionAABBOverlap)(const PNewtonJoint contact, float timestep, const PNewtonBody body0, const void * collisionNode0, const PNewtonBody body1, const void * collisionNode1, int threadIndex);
typedef NewtonOnCompoundSubCollisionAABBOverlap *PNewtonOnCompoundSubCollisionAABBOverlap;
typedef int __cdecl (*NewtonOnContactGeneration)(const PNewtonMaterial material, const PNewtonBody body0, const PNewtonCollision collision0, const PNewtonBody body1, const PNewtonCollision collision1, const PNewtonUserContactPoint contactBuffer, int maxCount, int threadIndex);
typedef NewtonOnContactGeneration *PNewtonOnContactGeneration;