external/Newton/Source/NGD.NewtonImport.pas

 
 TNewtonUserMeshCollisionRayHitDesc = Packed Record
  m_p0                   : array [0..3] of dFloat;      // ray origin in collision local space
  m_p1                   : array [0..3] of dFloat;      // ray destination in collision local space
  m_normalOut            : array [0..3] of dFloat;      // copy here the normal at the ray intersection
  m_userIdOut            : dLong;                       // copy here a user defined id for further feedback
  m_userData             : Pointer;                     // user data passed to the collision geometry at creation time
 end;
 PNewtonUserMeshCollisionRayHitDesc = ^TNewtonUserMeshCollisionRayHitDesc;
 
 TNewtonHingeSliderUpdateDesc = Packed Record
  m_accel                : dFloat;
  m_minFriction          : dFloat;  
  m_maxFriction          : dFloat;
  m_timestep             : dFloat;
 end;
PNewtonHingeSliderUpdateDesc = ^TNewtonHingeSliderUpdateDesc;


 TNewtonUserContactPoint = packed record
  m_point                : array [0..3] of dFloat;
  m_normal               : array [0..3] of dFloat;
  m_shapeId0             : dLong;
  m_shapeId1             : dLong;
  m_penetration          : dFloat;
  m_unused               : array [0..2] of Integer;
 end;
 PNewtonUserContactPoint = ^TNewtonUserContactPoint;

TNewtonImmediateModeConstraint = packed record
	m_jacobian01: array[0..7, 0..5] of dfloat;
	m_jacobian10: array[0..7, 0..5] of dfloat;
	m_minFriction: array[0..7] of dfloat;
	m_maxFriction: array[0..7] of dfloat;
	m_jointAccel: array[0..7] of dfloat;
	m_jointStiffness: array[0..7] of dfloat;
end;
PNewtonImmediateModeConstraint = ^TNewtonImmediateModeConstraint;
 // data structure for interfacing with NewtonMesh
 TNewtonMeshDoubleData = packed record
  m_data          : Pdouble;
  m_indexList     : PInteger;
  m_strideInBytes : Integer;
 end;
 PNewtonMeshDoubleData = ^TNewtonMeshDoubleData;
  
 TNewtonMeshFloatData = packed record
  m_data          : PdFloat;
  m_indexList     : PInteger;
  m_strideInBytes : Integer;
 end;
 PNewtonMeshFloatData = ^TNewtonMeshFloatData;
 
 TNewtonMeshVertexFormat = packed record
  m_faceCount : Integer;
  m_faceIndexCount: PInteger;
  m_faceMaterial: PInteger;
  m_vertex: TNewtonMeshDoubleData;
  m_normal: TNewtonMeshFloatData;
  m_binormal: TNewtonMeshFloatData;
  m_uv0: TNewtonMeshFloatData;
  m_uv1: TNewtonMeshFloatData;
  m_vertexColor: TNewtonMeshFloatData;
 end;
 PNewtonMeshVertexFormat = ^TNewtonMeshVertexFormat;
 
 // Newton callback functions
NewtonAllocMemory = function(sizeInBytes: Integer): Pointer; cdecl;
PNewtonAllocMemory = ^NewtonAllocMemory;
NewtonFreeMemory = procedure(const ptr: Pointer; sizeInBytes: Integer); cdecl;
PNewtonFreeMemory = ^NewtonFreeMemory;
 
NewtonWorldDestructorCallback = procedure(const world: PNewtonWorld); cdecl;
PNewtonWorldDestructorCallback = ^NewtonWorldDestructorCallback;

NewtonPostUpdateCallback = procedure(const world: PNewtonWorld; timestep: dfloat); cdecl;
PNewtonPostUpdateCallback = ^NewtonPostUpdateCallback;

NewtonCreateContactCallback = procedure(const newtonWorld: PNewtonWorld; const contact: PNewtonJoint); cdecl;
PNewtonCreateContactCallback = ^NewtonCreateContactCallback;

NewtonDestroyContactCallback = procedure(const newtonWorld: PNewtonWorld; const contact: PNewtonJoint); cdecl;
PNewtonDestroyContactCallback = ^NewtonDestroyContactCallback;

NewtonWorldListenerDebugCallback = procedure(const world: PNewtonWorld; const listener: Pointer; const debugContext: Pointer); cdecl;
PNewtonWorldListenerDebugCallback = ^NewtonWorldListenerDebugCallback;

NewtonWorldListenerBodyDestroyCallback = procedure(const world: PNewtonWorld; const listenerUserData: Pointer; const body: pNewtonBody); cdecl;
PNewtonWorldListenerBodyDestroyCallback = ^NewtonWorldListenerBodyDestroyCallback;

NewtonWorldUpdateListenerCallback = procedure(const world: PNewtonWorld; const listenerUserData: Pointer; timestep: dfloat); cdecl;
PNewtonWorldUpdateListenerCallback = ^NewtonWorldUpdateListenerCallback;

NewtonWorldDestroyListenerCallback = procedure(const world: PNewtonWorld; const listenerUserData: Pointer); cdecl;
PNewtonWorldDestroyListenerCallback = ^NewtonWorldDestroyListenerCallback;

NewtonGetTimeInMicrosencondsCallback = function(): int64; cdecl;
PNewtonGetTimeInMicrosencondsCallback = ^NewtonGetTimeInMicrosencondsCallback;

NewtonSerializeCallback = procedure(const serializeHandle: Pointer; const buffer: Pointer; size: Integer); cdecl;
PNewtonSerializeCallback = ^NewtonSerializeCallback;

NewtonDeserializeCallback = procedure(const serializeHandle: Pointer; const buffer: Pointer; size: Integer); cdecl;
PNewtonDeserializeCallback = ^NewtonDeserializeCallback;

NewtonOnBodySerializationCallback = procedure(const body: pNewtonBody; const userData: Pointer; functionparam: PNewtonSerializeCallback; const serializeHandle: Pointer); cdecl;
PNewtonOnBodySerializationCallback = ^NewtonOnBodySerializationCallback;

NewtonOnBodyDeserializationCallback = procedure(const body: pNewtonBody; const userData: Pointer; functionparam: PNewtonDeserializeCallback; const serializeHandle: Pointer); cdecl;
PNewtonOnBodyDeserializationCallback = ^NewtonOnBodyDeserializationCallback;

NewtonOnJointSerializationCallback = procedure(const joint: PNewtonJoint; functionparam: PNewtonSerializeCallback; const serializeHandle: Pointer); cdecl;
PNewtonOnJointSerializationCallback = ^NewtonOnJointSerializationCallback;

NewtonOnJointDeserializationCallback = procedure(const body0: pNewtonBody; const body1: pNewtonBody; functionparam: PNewtonDeserializeCallback; const serializeHandle: Pointer); cdecl;
PNewtonOnJointDeserializationCallback = ^NewtonOnJointDeserializationCallback;

 // user collision callbacks
NewtonOnUserCollisionSerializationCallback = procedure(const userData: Pointer; functionparam: PNewtonSerializeCallback; const serializeHandle: Pointer); cdecl;
PNewtonOnUserCollisionSerializationCallback = ^NewtonOnUserCollisionSerializationCallback;

NewtonUserMeshCollisionDestroyCallback = procedure(const userData: Pointer); cdecl;
PNewtonUserMeshCollisionDestroyCallback = ^NewtonUserMeshCollisionDestroyCallback;

NewtonUserMeshCollisionRayHitCallback = function(const lineDescData: PNewtonUserMeshCollisionRayHitDesc): dfloat; cdecl;
PNewtonUserMeshCollisionRayHitCallback = ^NewtonUserMeshCollisionRayHitCallback;

NewtonUserMeshCollisionGetCollisionInfo = procedure(const userData: Pointer; const infoRecord: PNewtonCollisionInfoRecord); cdecl;
PNewtonUserMeshCollisionGetCollisionInfo = ^NewtonUserMeshCollisionGetCollisionInfo;

NewtonUserMeshCollisionAABBTest = function(const userData: Pointer; const boxP0: pfloat; const boxP1: pfloat): Integer; cdecl;
PNewtonUserMeshCollisionAABBTest = ^NewtonUserMeshCollisionAABBTest;

NewtonUserMeshCollisionGetFacesInAABB = function(const userData: Pointer; const p0: pfloat; const p1: pfloat; const vertexArray: Pfloat; const vertexCount: Pinteger; const vertexStrideInBytes: Pinteger; const indexList: Pinteger; maxIndexCount: Integer; const userDataList: Pinteger): Integer; cdecl;
PNewtonUserMeshCollisionGetFacesInAABB = ^NewtonUserMeshCollisionGetFacesInAABB;

NewtonUserMeshCollisionCollideCallback = procedure(const collideDescData: PNewtonUserMeshCollisionCollideDesc; const continueCollisionHandle: Pointer); cdecl;
PNewtonUserMeshCollisionCollideCallback = ^NewtonUserMeshCollisionCollideCallback;

NewtonTreeCollisionFaceCallback = function(const context: Pointer; const polygon: pfloat; strideInBytes: Integer; const indexArray: Pinteger; indexCount: Integer): Integer; cdecl;
PNewtonTreeCollisionFaceCallback = ^NewtonTreeCollisionFaceCallback;

NewtonCollisionTreeRayCastCallback = function(const body: pNewtonBody; const treeCollision: PNewtonCollision; intersection: dfloat; const normal: pfloat; faceId: Integer; const usedData: Pointer): dfloat; cdecl;
PNewtonCollisionTreeRayCastCallback = ^NewtonCollisionTreeRayCastCallback;

NewtonHeightFieldRayCastCallback = function(const body: pNewtonBody; const heightFieldCollision: PNewtonCollision; intersection: dfloat; row: Integer; col: Integer; const normal: pfloat; faceId: Integer; const usedData: Pointer): dfloat; cdecl;
PNewtonHeightFieldRayCastCallback = ^NewtonHeightFieldRayCastCallback;

NewtonCollisionCopyConstructionCallback = procedure(const newtonWorld: PNewtonWorld; const collision: PNewtonCollision; const sourceCollision: PNewtonCollision); cdecl;
PNewtonCollisionCopyConstructionCallback = ^NewtonCollisionCopyConstructionCallback;

NewtonCollisionDestructorCallback = procedure(const newtonWorld: PNewtonWorld; const collision: PNewtonCollision); cdecl;
PNewtonCollisionDestructorCallback = ^NewtonCollisionDestructorCallback;

NewtonTreeCollisionCallback = procedure(const bodyWithTreeCollision: pNewtonBody; const body: pNewtonBody; faceID: Integer; vertexCount: Integer; const vertex: pfloat; vertexStrideInBytes: Integer); cdecl;
PNewtonTreeCollisionCallback = ^NewtonTreeCollisionCallback;

NewtonBodyDestructor = procedure(const body: pNewtonBody); cdecl;
PNewtonBodyDestructor = ^NewtonBodyDestructor;

NewtonApplyForceAndTorque = procedure(const body: pNewtonBody; timestep: dfloat; threadIndex: Integer); cdecl;
PNewtonApplyForceAndTorque = ^NewtonApplyForceAndTorque;

NewtonSetTransform = procedure(const body: pNewtonBody; const matrix: pfloat; threadIndex: Integer); cdecl;
PNewtonSetTransform = ^NewtonSetTransform;

NewtonIslandUpdate = function(const newtonWorld: PNewtonWorld; const islandHandle: Pointer; bodyCount: Integer): Integer; cdecl;
PNewtonIslandUpdate = ^NewtonIslandUpdate;

NewtonFractureCompoundCollisionOnEmitCompoundFractured = procedure(const fracturedBody: pNewtonBody); cdecl;
PNewtonFractureCompoundCollisionOnEmitCompoundFractured = ^NewtonFractureCompoundCollisionOnEmitCompoundFractured;

NewtonFractureCompoundCollisionOnEmitChunk = procedure(const chunkBody: pNewtonBody; const fracturexChunkMesh: PNewtonFracturedCompoundMeshPart; const fracturedCompountCollision: PNewtonCollision); cdecl;
PNewtonFractureCompoundCollisionOnEmitChunk = ^NewtonFractureCompoundCollisionOnEmitChunk;

NewtonFractureCompoundCollisionReconstructMainMeshCallBack = procedure(const body: pNewtonBody; const mainMesh: PNewtonFracturedCompoundMeshPart; const fracturedCompountCollision: PNewtonCollision); cdecl;
PNewtonFractureCompoundCollisionReconstructMainMeshCallBack = ^NewtonFractureCompoundCollisionReconstructMainMeshCallBack;

NewtonWorldRayPrefilterCallback = function(const body: pNewtonBody; const collision: PNewtonCollision; const userData: Pointer): LongWord; cdecl;
PNewtonWorldRayPrefilterCallback = ^NewtonWorldRayPrefilterCallback;

NewtonWorldRayFilterCallback = function(const body: pNewtonBody; const shapeHit: PNewtonCollision; const hitContact: pfloat; const hitNormal: pfloat; collisionID: int64; const userData: Pointer; intersectParam: dfloat): dfloat; cdecl;
PNewtonWorldRayFilterCallback = ^NewtonWorldRayFilterCallback;

NewtonOnAABBOverlap = function(const contact: PNewtonJoint; timestep: dfloat; threadIndex: Integer): Integer; cdecl;
PNewtonOnAABBOverlap = ^NewtonOnAABBOverlap;

NewtonContactsProcess = procedure(const contact: PNewtonJoint; timestep: dfloat; threadIndex: Integer); cdecl;
PNewtonContactsProcess = ^NewtonContactsProcess;

NewtonOnCompoundSubCollisionAABBOverlap = function(const contact: PNewtonJoint; timestep: dfloat; const body0: pNewtonBody; const collisionNode0: Pointer; const body1: pNewtonBody; const collisionNode1: Pointer; threadIndex: Integer): Integer; cdecl;
PNewtonOnCompoundSubCollisionAABBOverlap = ^NewtonOnCompoundSubCollisionAABBOverlap;

NewtonOnContactGeneration = function(const material: PNewtonMaterial; const body0: pNewtonBody; const collision0: PNewtonCollision; const body1: pNewtonBody; const collision1: PNewtonCollision; const contactBuffer: PNewtonUserContactPoint; maxCount: Integer; threadIndex: Integer): Integer; cdecl;
PNewtonOnContactGeneration = ^NewtonOnContactGeneration;
